--- a/src/Components/Layout/Header/Header.css
+++ b/src/Components/Layout/Header/Header.css
@@ -1,31 +1,39 @@
 .navContainer
 {
     width:85vw !important;
-    
     margin-top: 0px;
     border-radius:7px;
-    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+    background: linear-gradient(deg, rgba(24, 222, 199, 0), rgba(4, 242, 214, 0));
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
-    
     border:1px solid rgba(255, 255, 255, 0.18);
-    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+    box-shadow: 0 5px 15px 0 rgba(4, 242, 213, 0.37);
     
 }
 .navContainer img {
     width:6rem;
 }
 .navContainer p{
-    color:#FCFFC1;
-    font-size:4rem;
+    color:#79e3d7;
+    font-size:3.5rem;
     margin: 0 2rem 0 2rem;
     font-family: 'Cookie', cursive;
 }
 .navMenu p{
-    font-size:1.4rem;
+    font-size:1.5rem;
+    color:#094647;
+    
+    margin: 0 1rem 0 1rem;
     font-family: 'IBM Plex Mono', monospace;
-    font-weight: 600;
+    font-weight: 800;
     text-transform:uppercase;
-    letter-spacing:0.2rem;
+    letter-spacing:0.01rem;
 
+}
+.navIcon {
+    color:#ff4d6b;
+    font-size: 2rem !important;
+    position: relative;
+    margin-right: 0.2rem;
+    top:0.4rem;
 }
